# fastapi-crud

./: Makefile  database.db  pyproject.toml
alembic/: env.py
alembic/versions/: 0665d6fe5cdf_add_table_teas.py  71e4e38036e6_init_sqlmodel_migrations.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/router/: auth.py  coffee.py  tea.py
app/schema/: coffee.py  login.py  tea.py
app/utils/: query_params.py
