[project]
name = "fastapi-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.129.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scalar-fastapi>=1.6.2",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]